--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # State Management (Optional but good)
   provider: ^6.0.5
 
+  # Firebase Authentication
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.14.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
