Implement multilingual treatment recommendations (7 days cure support)
- Created TreatmentTranslations class with 4+ languages (English, Hindi, Punjabi, Haryanvi)
- Implemented treatment duration translations (3/7/14/21/30 days)
- Added comprehensive action and severity translations
- Created LanguageService for language preference management with SharedPreferences
- Updated ResultsDetailsView to display cure duration card with translations
- Added treatment duration card showing multilingual treatment plans
- Updated SettingsView language selector to use supported languages
- Integrated multilingual content throughout results display
- Added shared_preferences dependency to pubspec.yaml
- Updated main.dart to initialize LanguageService
- Created comprehensive documentation for multilingual implementation
- All UI elements now respect user's language selection

--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_auth: ^4.14.0
 
+  # Local Storage
+  shared_preferences: ^2.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
