Rebrand app to AgriShield with new app icon configuration
- Changed app name from 'Anaj.ai' to 'AgriShield' across all platforms
- Updated pubspec.yaml with new project name and flutter_launcher_icons configuration
- Updated Android manifest with new app label 'AgriShield'
- Updated iOS Info.plist with new CFBundleDisplayName and CFBundleName
- Updated main.dart app title to 'AgriShield'
- Added flutter_launcher_icons to dev dependencies for automatic icon generation
- Created ICON_SETUP.md with complete icon configuration instructions
- Icons will be auto-generated from assets/images/app_icon.png using flutter_launcher_icons
- App now displays 'AgriShield' on home screen with leaf + medical cross icon

--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -1,5 +1,5 @@
-name: anaj_ai_mobile
-description: A new Flutter project for Anaj.ai.
+name: agrisheild
+description: AgriShield - Intelligent crop disease detection and treatment recommendation system.
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -43,13 +43,21 @@ dependencies:
   shared_preferences: ^2.2.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
   assets:
     - assets/models/crop_slm.tflite
+    - assets/images/app_icon.png
     - assets/models/labelmap.txt
     - assets/i18n/
